--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "javascript-action",
+  "name": "conventional-version-check",
   "version": "1.0.0",
-  "description": "JavaScript Action Template",
+  "description": "read version content as conventional version",
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
@@ -16,16 +16,21 @@
   "keywords": [
     "GitHub",
     "Actions",
-    "JavaScript"
+    "conventional"
   ],
-  "author": "",
-  "license": "MIT",
+  "author": {
+    "name": "sinlov",
+    "email": "sinlovgmppt@gmail.com",
+    "url": "https://github.com/convention-change/conventional-version-check"
+  },
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/actions/javascript-action/issues"
   },
   "homepage": "https://github.com/actions/javascript-action#readme",
   "dependencies": {
-    "@actions/core": "^1.10.0"
+    "@actions/core": "^1.10.0",
+    "@actions/github": "^5.1.1"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.36.1",
