--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: ./
+      id: check-version
       with:
-        milliseconds: 1000
+        sha-length: 8
+    - name: check test out
+      run: |
+        echo "sha: ${{ steps.check-version.outputs.sha }}"
+        echo "short-sha: ${{ steps.check-version.outputs.short-sha }}"
