--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "read version content as conventional version",
   "main": "index.js",
   "scripts": {
+    "format": "prettier --write index.js index.test.js src/*.js src/**/*.js src/**/**/*.js",
     "lint": "eslint .",
     "prepare": "ncc build index.js -o dist --source-map --license licenses.txt",
-    "test": "jest",
+    "test": "jest --ci",
     "all": "npm run lint && npm run prepare && npm run test"
   },
   "repository": {
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@vercel/ncc": "^0.36.1",
+    "prettier": "^3.0.0",
     "eslint": "^8.46.0",
     "jest": "^29.6.2"
   }
