--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -43,6 +43,7 @@ jobs:
         run: npm run prepare
 
       - name: Compare the expected and actual dist/ directories
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         run: |
           if [ "$(git diff --ignore-space-at-eol --ignore-cr-at-eol dist/ | wc -l)" -gt "0" ]; then
             echo "Detected uncommitted changes after build.  See status below:"
