--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "read version content as conventional version",
   "main": "index.js",
   "scripts": {
+    "clean:lockfile": "npx replace-lockfile-registry --registry https://registry.npmjs.org/",
     "format": "prettier --write index.js index.test.js src/*.js src/**/*.js src/**/**/*.js",
     "lint": "eslint .",
     "prepare": "ncc build index.js -o dist --source-map --license licenses.txt",
@@ -35,6 +36,7 @@
     "semver": "^7.7.1"
   },
   "devDependencies": {
+    "replace-lockfile-registry": "0.0.2",
     "@vercel/ncc": "^0.38.3",
     "prettier": "^3.5.3",
     "eslint": "^9.25.1",
